tests/invalid/comprehension_zip_non_list_args/main.py
def run_case() -> None:
    x: list[int] = [a for (a, b) in zip((1, 2), [3, 4])]

if __name__ == "__main__":
    run_case()
